FinalProject/GpMessages/205186599383200
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Monday, October 23, 2023 6:26:20 PM</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    .capitalize()u"Anderson"
    ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Monday, October 23, 2023 6:26:20 PM (Elapsed Time: 0.02 seconds)</msg></messages>